; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_reflog_helpers.c_reflog_print.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_reflog_helpers.c_reflog_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @reflog_print(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %9, i32* %7, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @git_reflog_read(i32** %5, i32* %10, i8* %11)
  store i64 0, i64* %6, align 8
  br label %13

13:                                               ; preds = %25, %2
  %14 = load i64, i64* %6, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @git_reflog_entrycount(i32* %15)
  %17 = icmp ult i64 %14, %16
  br i1 %17, label %18, label %28

18:                                               ; preds = %13
  %19 = load i32*, i32** %5, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i32* @git_reflog_entry_byindex(i32* %19, i64 %20)
  store i32* %21, i32** %8, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @reflog_entry_tostr(i32* %7, i32* %22)
  %24 = call i32 @git_buf_putc(i32* %7, i8 signext 10)
  br label %25

25:                                               ; preds = %18
  %26 = load i64, i64* %6, align 8
  %27 = add i64 %26, 1
  store i64 %27, i64* %6, align 8
  br label %13

28:                                               ; preds = %13
  %29 = load i32, i32* @stderr, align 4
  %30 = call i8* @git_buf_cstr(i32* %7)
  %31 = call i32 @fprintf(i32 %29, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %30)
  %32 = call i32 @git_buf_dispose(i32* %7)
  %33 = load i32*, i32** %5, align 8
  %34 = call i32 @git_reflog_free(i32* %33)
  ret void
}

declare dso_local i32 @git_reflog_read(i32**, i32*, i8*) #1

declare dso_local i64 @git_reflog_entrycount(i32*) #1

declare dso_local i32* @git_reflog_entry_byindex(i32*, i64) #1

declare dso_local i32 @reflog_entry_tostr(i32*, i32*) #1

declare dso_local i32 @git_buf_putc(i32*, i8 signext) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @git_buf_cstr(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1

declare dso_local i32 @git_reflog_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
